// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions API GET returns empty array initially 1`] = `[]`;

exports[`Transactions API POST /bulk inserts many (201): bulk-create 1`] = `
[
  {
    "__v": "<__v>",
    "_id": "<_id>",
    "amount": 1,
    "category": "Food",
    "context": "Personal",
    "createdAt": "<createdAt>",
    "date": "2026-05-10",
    "id": "6a30c8bcd8adc21fe369af37",
    "notes": "team lunch",
    "paymentMethod": "card",
    "source": "Lunch",
    "subcategory": "",
    "type": "expense",
    "updatedAt": "<updatedAt>",
    "userId": "000000000000000000000000",
  },
  {
    "__v": "<__v>",
    "_id": "<_id>",
    "amount": 2,
    "category": "Food",
    "context": "Personal",
    "createdAt": "<createdAt>",
    "date": "2026-05-10",
    "id": "6a30c8bcd8adc21fe369af38",
    "notes": "team lunch",
    "paymentMethod": "card",
    "source": "Lunch",
    "subcategory": "",
    "type": "expense",
    "updatedAt": "<updatedAt>",
    "userId": "000000000000000000000000",
  },
  {
    "__v": "<__v>",
    "_id": "<_id>",
    "amount": 3,
    "category": "Food",
    "context": "Personal",
    "createdAt": "<createdAt>",
    "date": "2026-05-10",
    "id": "6a30c8bcd8adc21fe369af39",
    "notes": "team lunch",
    "paymentMethod": "card",
    "source": "Lunch",
    "subcategory": "",
    "type": "expense",
    "updatedAt": "<updatedAt>",
    "userId": "000000000000000000000000",
  },
]
`;

exports[`Transactions API POST creates a transaction (201) and GET lists it: create 1`] = `
{
  "__v": "<__v>",
  "_id": "<_id>",
  "amount": 100,
  "category": "Food",
  "context": "Personal",
  "createdAt": "<createdAt>",
  "date": "2026-05-10",
  "id": "6a30c8bcd8adc21fe369aeea",
  "notes": "team lunch",
  "paymentMethod": "card",
  "source": "Lunch",
  "subcategory": "",
  "type": "expense",
  "updatedAt": "<updatedAt>",
  "userId": "000000000000000000000000",
}
`;

exports[`Transactions API POST creates a transaction (201) and GET lists it: list-after-create 1`] = `
[
  {
    "__v": "<__v>",
    "_id": "<_id>",
    "amount": 100,
    "category": "Food",
    "context": "Personal",
    "createdAt": "<createdAt>",
    "date": "2026-05-10",
    "id": "6a30c8bcd8adc21fe369aeea",
    "notes": "team lunch",
    "paymentMethod": "card",
    "source": "Lunch",
    "subcategory": "",
    "type": "expense",
    "updatedAt": "<updatedAt>",
    "userId": "000000000000000000000000",
  },
]
`;

exports[`Transactions API PUT updates a transaction: update 1`] = `
{
  "__v": "<__v>",
  "_id": "<_id>",
  "amount": 250,
  "category": "Food",
  "context": "Personal",
  "createdAt": "<createdAt>",
  "date": "2026-05-10",
  "id": "6a30c8bcd8adc21fe369af06",
  "notes": "updated",
  "paymentMethod": "card",
  "source": "Lunch",
  "subcategory": "",
  "type": "expense",
  "updatedAt": "<updatedAt>",
  "userId": "000000000000000000000000",
}
`;
